# web_module6

./: Courses_by_student.py  avarage_on_sub.py  pyproject.toml  query_11.sql  query_12.sql  query_handler.py  simple_script.py  table_faker.py
