[tool.poetry]
name = "module6"
version = "0.1.0"
description = ""
authors = ["Terinor <kirstruk01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
